...
import { connect } from "react-redux";
import { setPropertyType, setPropertyDetails, setCustomerDetails } from "./../../reducers/Action";
import CustomButtonGroup from "./../../components/CustomButtonGroup";
import * as  AppConstant from "./../../utils/AppConstant";


const homePlace = { description: 'Mumbai', geometry: { location: { lat: 48.8152937, lng: 2.4597668 } } };


const ContactLocalityDetailsForm = props => {
  const ref = useRef();
  const { navigation } = props;
  const [city, setCity] = useState("");
...
  return (
    <View
      style={{ flex: 1, backgroundColor: "rgba(245,245,245, 0.2)" }}
    >
      <KeyboardAwareScrollView onPress={Keyboard.dismiss} keyboardShouldPersistTaps="handled">
        <ScrollView style={styles.container} keyboardShouldPersistTaps={'always'} listViewDisplayed={false}>
          <Text>Enter city and locations where customer wants the property</Text>
          <TextInput
            label="City*"
            placeholder="Enter city where customer wants property"
            value={city}
            onChangeText={text => setCity(text)}
            onFocus={() => setIsVisible(false)}
...
              }
            }}
          />
          <View style={{ marginTop: 20 }} />
           <GooglePlacesAutocomplete
                      ref={ref}
                      placeholder="Add multiple locations within city"
                      textInputProps={{
                        placeholderTextColor: 'rgba(90, 90, 90,1)',
                        returnKeyType: "search"
                      }}
                      keyboardShouldPersistTaps='handled'
                      minLength={2}
...
