export const EMPLOYEE_ROLE = ["add", "master", "admin"]// this is who can add employee
export const EMPLOYEE_ROLE_DELETE = ["admin"]
export const RENT = "Rent";
export const SELL = "Sell";
export const BUY = "Buy";
export const RESIDENTIAL = "Residential";
export const COMMERCIAL = "Commercial";
export const PROPERTY = "Property";
export const CUSTOMER = "Customer";
export const CONTACT = "Contact";
export const REMINDER = "Reminder";
export const MEETING = "Meeting";
export const BHK = {
    "1": "1 BHK",
    "2": "2 BHK",
    "3": "3 BHK",
    "4": "4 BHK",
    "5": "4+ BHK",
}

export const PROPERTY_TYPE = {
    "Residential": "Residential",
    "Commercial": "Commercial"
}
export const PROPERTY_FOR = {
    "Rent": "Rent",
    "Sell": "Sell"
}

export const TENANTS = {
    "Bachelor": "Bachelor",
    "Family": "Family",
    "Working Bachelor": "Working Bachelor"
}

export const FURNISHING = {
    "Full": "Full",
    "Semi Furnished": "Semi Furnished",
    "Unfurnished": "Unfurnished"
}

export const PARKING = {
    "Bike": "Bike",
    "Car": "Car",
    "Both": "Both",
    "None": "None"
}

export const HOUSE_TYPE = {
    "Apartment": "Apartment",
    "Independent House": "Independent House",
    "Villa": "Villa"
}

export const USER_STATUS = {
    "Active": "Active",
    "Inactive": "Inactive",
    "suspend": "suspend"
}


export const COMMERCIAL_PROPERTY_TYPE_OPTION = [
    { text: 'Shop' },
    { text: 'Office' },
    { text: 'Showroom' },
    { text: ' Restaurant/Cafe' },
    { text: 'Pub/Night Club' },
    { text: 'Clinic' },
    { text: 'Godown' },
];

export const COMMERCIAL_PROPERTY_BUILDING_TYPE_OPTION = [

    { text: 'Businesses Park' },
    { text: 'Mall' },
    { text: 'StandAlone' },
    { text: 'Industrial' },
    { text: 'Shopping Complex' },
    { text: 'Commersial Complex' }
];

export const COMMERCIAL_PROPERTY_IDEAL_FOR_OPTION = [

    { text: 'Shop' },
    { text: 'Bank' },
    { text: 'ATM' },
    { text: 'Restaurant/Cafe' },
    { text: 'Pub/Night Club' },
    { text: 'Office' },
    { text: 'Showroom' },
    { text: 'Godown' },
    { text: 'Clinic' }
];

export const COMMERCIAL_PARKING_OPTION = [
    { text: 'Public' },
    { text: 'Private' },
    { text: 'Both' },
];

export const PROPERTY_AGE_OPTION = [
    { text: '1-5' },
    { text: '6-10' },
    { text: '11-15' },
    { text: '20+' },
];

export const POWER_BACKUP_OPTION = [
    { text: 'Yes' },
    { text: 'No' },
];

export const NEGOTIABLE_OPTION = [
    { text: 'Yes' },
    { text: 'No' },
];

export const PROPERTY_TYPE_OPTION = [
    { text: 'Residential' },
    { text: 'Commercial' },
];

export const CUSTOMER_PROPERTY_FOR_OPTION = [
    { text: 'Rent' },
    { text: 'Buy' },
];

export const PROPERTY_PREFERRED_TENANTS_OPTION = [
    { text: 'Family' },
    { text: 'Bachelors' },
    { text: 'Any' },
];

export const CUSTOMER_PREFERRED_TENANTS_OPTION = [
    { text: 'Family' },
    { text: 'Bachelors' },
];

export const BHK_OPTION = [
    { text: '1RK' },
    { text: '1BHK' },
    { text: '2BHK' },
    { text: '3BHK' },
    { text: '4+BHK' },
];

export const HOUSE_TYPE_OPTION = [
    { text: 'Apartment' },
    { text: 'Villa' },
    { text: 'Independent House' },
];

export const FURNISHING_STATUS_OPTION = [
    { text: 'Full' },
    { text: 'Semi' },
    { text: 'Empty' },
];

export const PARKING_OPTION = [
    { text: 'Bike' },
    { text: 'Car' },
]

export const LIFT_AVAILBLE_OPTION = [
    { text: 'Yes' },
    { text: 'No' },
];

export const PARKING_REQUIRED_OPTION = [
    { text: 'Must' },
    { text: 'Doesnt Matter' },
]


export const REMINDER_FOR_OPTION = [
    { text: 'Call' },
    { text: 'Meeting' },
    { text: 'Property Visit' },
];


export const AM_PM_OPTION = [
    { text: 'AM' },
    { text: 'PM' },
]

export const DEAL_WIN_OPTION = [
    { text: 'Yes' },
    { text: 'No' },
];