...

      <Tab.Screen
        // lazy={false}
        name="Contact"
        component={ContactsStack}
        options={{
          tabBarAccessibilityLabel: "bottom_tab_contacts_icon",
          tabBarLabel: "",
          tabBarIcon: ({ focused }) => (
            <AntDesign name="contacts" color={focused ? '#33aaff' : '#828282'} size={26}/>
          )
        }}
      />
...
