...
        }}
      // options={{ tabBarLabel: "Home!" }}
      />
      <Stack.Screen
        name="CustomerDetailsResidentialRentFromList"
        component={CustomerDetailsResidentialRentFromList}
        options={{ title: "Customer Details" , headerBackTitle: "Back"}}
      />
      <Stack.Screen
        name="CustomerDetailsResidentialBuyFromList"
        component={CustomerDetailsResidentialBuyFromList}
        options={{ title: "Customer Details" , headerBackTitle: "Back"}}
      />
...
