...
      </View>

      <View style={styles.margin1}></View>
      {/* property details */}
      <View style={styles.overviewContainer}>
        <View style={styles.overview}>
          <Text>Details</Text>
          <View style={styles.horizontalLine}></View>
        </View>
        <View style={styles.overviewColumnWrapper}>
          <View style={styles.overviewLeftColumn}>
            {/* <View style={[styles.subDetails]}>
              <Text style={[styles.subDetailsValue]}>
...
              <Text style={[styles.subDetailsTitle]}>Bathroom</Text>
            </View> */}
            <View style={[styles.subDetails]}>
              <Text style={[styles.subDetailsValue]}>
                {item.customer_locality.city}
              </Text>
              <Text style={[styles.subDetailsTitle]}>City</Text>
            </View>

            <View style={{ paddingBottom: 20, width: "70%" }}>
              <Text style={[styles.subDetailsValue]}>
                {location.join(', ')}
              </Text>
              <Text style={[styles.subDetailsTitle]}>Locations</Text>
            </View>
            <View style={[styles.subDetails]}>
              <Text style={[styles.subDetailsValue]}>
                {formatIsoDateToCustomString(item.customer_buy_details.available_from)}
              </Text>
              <Text style={[styles.subDetailsTitle]}>Possession</Text>
            </View>
            {/* <View style={[styles.subDetails]}>
              <Text style={[styles.subDetailsValue]}>
                {numDifferentiation(item.customer_buy_details.maintenance_charge)}
              </Text>
              <Text style={[styles.subDetailsTitle]}>Maintenance charge</Text>
...
          </View>
          <View style={styles.overviewRightColumn}>
            <View style={[styles.subDetails]}>
              <Text style={[styles.subDetailsValue]}>
                {item.customer_property_details.lift}
              </Text>
              <Text style={[styles.subDetailsTitle]}>Lift</Text>
            </View>
            <View style={[styles.subDetails]}>
              <Text style={[styles.subDetailsValue]}>
                {item.customer_property_details.parking_type}
              </Text>
              <Text style={[styles.subDetailsTitle]}>Parking</Text>
            </View>
            {/* <View style={[styles.subDetails]}>
              <Text style={[styles.subDetailsValue]}>
                {item.customer_property_details.floor_number}/
                {item.customer_property_details.total_floor}
              </Text>
              <Text style={[styles.subDetailsTitle]}>Floor</Text>
            </View> */}
            <View style={[styles.subDetails]}>
              <Text style={[styles.subDetailsValue]}>
                {item.customer_buy_details.negotiable}
              </Text>
              <Text style={[styles.subDetailsTitle]}>Negotiable</Text>
            </View>
            {/* <View style={[styles.subDetails]}>
              <Text style={[styles.subDetailsValue]}>
                {item.customer_property_details.property_age} years
              </Text>
              <Text style={[styles.subDetailsTitle]}>Age Of Building</Text>
...
