 appId: com.realtoapp.ios
---
- tapOn: "bottom_tab_contacts_icon"
- waitForAnimationToEnd
- tapOn: "add_customer_icon"
- waitForAnimationToEnd
- assertVisible: "Add new customer details who is looking to rent or buy a property"
- assertVisible: "Customer Details"
- tapOn: "Name*"
- inputText: "Customer 1 Residential Rent"
- tapOn: "Mobile*"
- inputText: "1234567890"
- tapOn: "Address*"
- inputText: "Juhu, Mumbai"
- waitForAnimationToEnd
- tapOn:
    text: "return"
    optional: true
- assertVisible: "NEXT"
- tapOn: "NEXT"

- waitForAnimationToEnd
- assertVisible: "Locality Details"
- assertVisible: "Enter city and locations where customer wants the property"
- tapOn: "City*"
- inputText: "Mumbai"
- tapOn: "Add multiple locations within city"
- inputText: "juhu"
- tapOn: "Juhu Beach, Maharashtra"
- assertVisible: "Select Property Type"
- tapOn: "property_type_commercial"
- assertVisible: "Select Property For"
- tapOn: "property_for_buy"
- tapOn: "NEXT"

- waitForAnimationToEnd
- assertVisible: "Customer Property Details"
- assertVisible: "Property Type*"
- tapOn: "commercial_property_type_shop"
- assertVisible: "Building type*"
- tapOn: "commercial_property_building_type_mall"
- assertVisible: "Looking for size in sqft*"
- tapOn: "Property Size"
- inputText: "500"
- waitForAnimationToEnd  
- tapOn: "Done"
- waitForAnimationToEnd  
- assertVisible: "Parkings*"
- tapOn: "parking_required_must"
- tapOn: "NEXT"


- waitForAnimationToEnd
- assertVisible: "Buy Details"
- tapOn: "Expected Buy Price*"
- inputText: "25000000"
- waitForAnimationToEnd  
- tapOn: "Done"
- tapOn: "Required From *"
- waitForAnimationToEnd  
- tapOn: " 31 "
- tapOn: "OK"
- assertVisible: "Negotiable*"
- tapOn: "negotiable_yes"
- tapOn: "NEXT"

- waitForAnimationToEnd
- assertVisible: "Customer Final Details"
- assertVisible: "Shop"
- assertVisible: "Prop Type"
- assertVisible: "Buy"
- assertVisible: "Details"
- assertVisible: "City"
- assertVisible: "Mumbai"
- assertVisible: "Locations"
- assertVisible: "Juhu Beach"
- assertVisible: "Must"
- assertVisible: "Parking"
- assertVisible: "Building Type"
- tapOn: "ADD"

- waitForAnimationToEnd
- tapOn: "Commercial"