appId: com.realtoapp.ios
---
- tapOn: "bottom_tab_contacts_icon"
- tapOn: "Commercial"
- assertVisible: "Commercial"
- tapOn:
    id: "ref_id_520167"
- assertVisible: "Customer Details"
- assertVisible: "Customer Rent Commercial 1"
- assertVisible: "+91 99330577777"
- assertVisible: "Juhu Mumbai"
- assertVisible: "Shop"
- assertVisible: "30 K"
- assertVisible: "1.5 Lac"
- assertVisible: "Details"
- assertVisible: "City"
- assertVisible: "Possession"
- assertVisible: "Locations"
- assertVisible: "Parking"
- assertVisible: "Building Type"
- tapOn: "Go back"

- assertVisible: "Commercial"
- tapOn:
    id: "ref_id_066539"
- assertVisible: "Customer Details"
- assertVisible: "Customer Buy Commercial 1"
- assertVisible: "+91 9933088888"
- assertVisible: "Juhu Mumbai"
- assertVisible: "Shop"
- assertVisible: "3 Cr"
- assertVisible: "Mall"
- assertVisible: "Details"
- assertVisible: "City"
- assertVisible: "Locations"
- assertVisible: "Possession"
- assertVisible: "Negotiable"
- assertVisible: "Parking"
- tapOn: "Go back"

- assertVisible: "Commercial"
