appId: com.realtoapp.ios
---
- tapOn: "bottom_tab_contacts_icon"
- tapOn: "Residential"
- assertVisible: "Residential"
- tapOn:
    id: "ref_id_678800"
- assertVisible: "Customer Details"
- assertVisible: "Customer Rent Residential 1"
- assertVisible: "+91 9933055555"
- assertVisible: "Juhu Mumbai"
- assertVisible: "2BHK"
- assertVisible: "30 K"
- assertVisible: "1.5 Lac"
- assertVisible: "Semi"
- assertVisible: "Details"
- assertVisible: "City"
- assertVisible: "Locations"
- assertVisible: "Lift"
- assertVisible: "Possession"
- assertVisible: "Parking"
- tapOn: "Go back"

- assertVisible: "Residential"
- tapOn:
    id: "ref_id_568630"
- assertVisible: "Customer Details"
- assertVisible: "Customer Buy Residential 1"
- assertVisible: "+91 9933066666"
- assertVisible: "juhu mumbai"
- assertVisible: "2BHK"
- assertVisible: "3 Cr"
- assertVisible: "Semi"
- assertVisible: "Details"
- assertVisible: "City"
- assertVisible: "Lift"
- assertVisible: "Locations"
- assertVisible: "Parking"
- assertVisible: "Possession"
- assertVisible: "Negotiable"
- tapOn: "Go back"

- assertVisible: "Residential"
